# justerm

./: .gitattributes  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  README.md
.github/: dependabot.yml
.github/scripts/: check-published-readme.mjs
.github/workflows/: ci.yml  fuzz.yml  publish-crate.yml  publish-renderer.yml  publish-wasm.yml  publish-web.yml  supply-chain.yml  test.yml
bench/xterm-compare/: .gitignore  bench-decode.mjs  bench-xterm.mjs  package.json  verify-sync.mjs
benches/: inputs.rs  throughput.rs
docs/: architecture.md
docs/adr/: 0001-build-on-vte-not-alacritty-terminal.md  0002-adopt-beamterm-as-the-renderer.md  0003-damage-model-incremental-bounds.md  0004-spec-faithful-when-alacritty-omits.md  0005-binary-reference-based-serialization.md  0006-ci-action-supply-chain-gate.md  0006-supply-chain-action-pinning.md  0007-robustness-testing-property-and-fuzz.md  0008-wasm-decode-binding-separate-crate.md  0009-o1-scroll-in-grid-row-ring.md  0010-all-prefixed-crate-naming.md  0011-justerm-web-viewport-cell-mirror.md  0012-first-party-webgl-renderer-direction.md  0013-expose-scroll-position-in-frame.md  0014-carry-interaction-overlays-in-the-frame.md  0015-marker-primitive-and-overlay-marker-group.md  0016-mouse-mode-wanted-events-mask-in-frame.md  0017-core-consumer-boundary-mechanism-vs-policy.md  0018-justerm-renderer.md  0019-cell-composition-model.md  0020-what-qualifies-for-the-frame-snapshot.md  0021-single-context-multi-viewport.md  0022-cell-geometry-from-an-ink-scan.md  0023-spacing-settings-are-css-pixels.md  0024-decoration-projection-and-precedence.md  0025-row-and-wide-pair-cell-state-ownership.md
docs/agents/: issue-tracker.md  reference-facts.md  release.md  supply-chain.md  theflow.md  triage-labels.md
docs/perf/: xterm-comparison.md
docs/research/: terminal-engine-renderer-architectures.md
examples/: gen_render_frame.rs  time_decode.rs  time_feed.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: feed.rs  serialize.rs
justerm-core/: Cargo.toml  README.md
justerm-core/benches/: inputs.rs  throughput.rs  wrap_run.rs
justerm-core/examples/: dump_bench_inputs.rs  gen_render_frame.rs  time_decode.rs  time_feed.rs
justerm-core/src/: cell.rs  cursor.rs  event.rs  grapheme.rs  grid.rs  input.rs  lib.rs  logical.rs  search.rs  selection.rs  serialize.rs  term.rs
justerm-core/tests/: acceptance.rs  accessible.rs  alt_markers.rs  alt_screen.rs  bench_inputs.rs  cadence.rs  charset.rs  color_scheme.rs  command_lines.rs  cursor_style.rs  damage.rs  decawm.rs  deccolm.rs  dynamic_color.rs  events.rs  freed_cell.rs  grapheme_cluster.rs  hyperlink.rs  input.rs  irm.rs  keypad.rs  keypad_keys.rs  kitty.rs  lnm.rs  logical_lines.rs  marker_alt_guard.rs  min_columns.rs  min_rows.rs  mouse_encoding.rs  mouse_mode.rs  osc133.rs  overlay.rs  reflow_trim.rs  reflow_wide_pair.rs  region_edit_anchors.rs  reply.rs  reset.rs  resize.rs  reverse_wrap.rs  robustness.rs  (+11 more)
justerm-core/tests/fixtures/: capture-kitty.sh  capture-undercurl.sh  htop.altscreen.golden  htop.raw  top.golden  undercurl_matrix.raw  vim_redraw.full.golden
justerm-facade/: Cargo.toml  README.md
justerm-facade/src/: lib.rs
justerm-renderer/: .gitignore  Cargo.toml  README.md  package.json  playwright.config.mjs
justerm-renderer/demo/: bg-alpha.html  color-policy.html  context-loss-timeout.html  context-loss.html  cursor.html  damage.html  decoration.html  dpr-change.html  dpr.html  emoji.html  emoji297.html  font-family.html  font-size.html  frame-guard.html  index.html  oversized.html  pack-count.html  palette.html  proof.js  screen-composited.html  selection.html  spacing.html  underline-color.html  underline.html
justerm-renderer/e2e/: proof.test.mjs  proofs.spec.mjs  screen-composited.spec.mjs
justerm-renderer/scripts/: serve.mjs
justerm-renderer/src/: attrs.rs  bitmap.rs  builtin.rs  color.rs  context_loss.rs  contrast.rs  cursor.rs  decoration.rs  dpr.rs  emoji.rs  frame.rs  frame_grid.rs  glyph_cache.rs  glyph_class.rs  glyph_resolve.rs  lib.rs  mat4.rs  metrics.rs  overlay.rs  palette.rs  rasterizer.rs  render_policy.rs  upload.rs  webgl.rs
justerm-wasm/: Cargo.toml  README.md
justerm-wasm-decode/: Cargo.toml  README.md
justerm-wasm-decode/examples/: gen_smoke_frame.rs
justerm-wasm-decode/js/: colors.d.ts  colors.js
justerm-wasm-decode/scripts/: finish-pkg.mjs  smoke-decode.mjs  smoke.mjs
justerm-wasm-decode/src/: lib.rs
justerm-wasm-decode/tests/: readme_pins.rs  web.rs
justerm-wasm/examples/: gen_smoke_frame.rs
justerm-wasm/js/: colors.d.ts  colors.js
justerm-wasm/scripts/: finish-pkg.mjs  smoke-decode.mjs  smoke.mjs
justerm-wasm/src/: lib.rs
justerm-wasm/tests/: web.rs
justerm-web/: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.test.json  tsup.config.ts  vite.config.ts  vitest.config.ts
justerm-web/demo/: fake-search.ts  fake-select.ts  index.html  main.ts
justerm-web/e2e/: demo.spec.ts
justerm-web/src/: a11y-selection.ts  accessibility-dom.ts  accessibility.ts  accessible-view.ts  beamterm-renderer.ts  cell-mirror.ts  command-announce.ts  command-nav.ts  composition.ts  contrast.ts  cursor.ts  decoration-render.ts  decorations.ts  events.ts  fit.ts  frame-source.ts  glyph-class.ts  index.ts  input.ts  justerm-renderer.ts  links.ts  markers.ts  overlay-compose.ts  overlay.ts  render-core.ts  render-policy.ts  renderer.ts  screen-reader.ts  scroll-control.ts  (+5 more)
src/: cell.rs  color.rs  cursor.rs  damage.rs  event.rs  grid.rs  input.rs  lib.rs  serialize.rs  term.rs
teach/: MISSION.md  NOTES.md  README.md  RESOURCES.md
tests/: acceptance.rs  alt_screen.rs  bench_inputs.rs  cadence.rs  charset.rs  color_scheme.rs  cursor_style.rs  damage.rs  decawm.rs  deccolm.rs  events.rs  hyperlink.rs  input.rs  irm.rs  keypad.rs  keypad_keys.rs  kitty.rs  lnm.rs  mouse_encoding.rs  reply.rs  reset.rs  resize.rs  reverse_wrap.rs  robustness.rs  search.rs  selection.rs  serialize.rs  sync_output.rs  vt52.rs  vt_compliance.rs  vttest.rs  win32_input.rs
(+45 files in other folders)
