[workspace]
members = ["justerm-core", "justerm-wasm-decode"]
# `fuzz` (cargo-fuzz, nightly/libFuzzer) and `justerm-facade` (the one-shot `justerm`
# 0.5.1 tombstone, frozen at its own version) are deliberately OUTSIDE the workspace:
# the fuzz crate carries its own `[workspace]`, and the facade must not be dragged by
# the version-lockstep below. Verify them via `--manifest-path` (see CLAUDE.md).
exclude = ["fuzz", "justerm-facade"]
resolver = "3"

# Shared across the core crate and the `justerm-wasm-decode` binding so one version bump
# moves both — the version-lockstep ADR-0005/0008 require (#34).
[workspace.package]
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justerm"
