[package]
name = "justerm-renderer"
# Independent version track: this crate is EXCLUDED from the root workspace
# (see the root Cargo.toml comment + ADR-0018). web-sys/glow make it wasm32-only,
# so it must stay out of the host `cargo test --workspace` gate; its own gate is
# `cargo build -p justerm-renderer --target wasm32-unknown-unknown`.
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kihyun1998/justerm"
description = "First-party WebGL2 terminal grid renderer for the justerm family. Reimplements the third-party beamterm renderer in justerm's own architecture (ADR-0018, supersedes ADR-0002)."
# Published as an npm artifact via wasm-pack, not to crates.io (like justerm-wasm-decode).
publish = false

# `cdylib` is the wasm artifact wasm-pack ships; `rlib` lets the crate's own
# pure-logic tests + future wasm-bindgen-test targets link it.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.106"
js-sys = "0.3.81"
glow = "0.17"
console_error_panic_hook = "0.1.7"
lru = "0.16"
# NFC-normalise grapheme-cluster keys so a decomposed cluster (e + combining acute)
# and its precomposed form share one atlas slot (#285; glyph_cache consumer contract).
unicode-normalization = "0.1"

[dependencies.web-sys]
version = "0.3.81"
features = [
    "Window",
    "Document",
    "Element",
    # `webglcontextlost` / `webglcontextrestored` listeners on the canvas (#269).
    "EventTarget",
    "Event",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlTexture",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "TextMetrics",
    "ImageData",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
