[package]
name = "justerm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM decoder for justerm's wire format: structure-of-arrays cell columns + format-owned colour/flag helpers. See ADR-0008."
readme = "README.md" # wasm-pack copies this into the npm package as its page
publish = false # published as an npm artifact via wasm-pack, not to crates.io

# `cdylib` is the wasm artifact wasm-pack ships; `rlib` lets this crate's own
# wasm-bindgen-test targets link it. The *core* `justerm` crate stays rlib-only.
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
justerm = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
